# pbg-membrane-actin-composite

./: .gitignore  NEXT_STEPS.md  README.md  index.html  pyproject.toml  workspace.yaml
.github/workflows/: workspace-ci.yml
demo/: demo_report.py  report.html
docs/: spec.md
investigations/boundary-condition-staircase/: investigation.yaml
investigations/mem3dg-readdy-coupling/: investigation.yaml
notes/friction/: 2026-05-18-3d-viz-and-pr-flow.md  2026-05-18-dashboard-first-render.md  2026-05-18-running-the-full-investigation.md  2026-05-18-workspace-onboarding-from-composite.md  2026-05-19-visualization-architecture-and-friction.md
pbg_membrane_actin_composite/: __init__.py  core.py  document.py  processes.py  wiring.py
pbg_membrane_actin_composite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pbg_membrane_actin_composite/composites/: __init__.py  rung1_fixed_boundary.composite.yaml  rung2_rigid_movable_boundary.composite.yaml  rung3_flexible_mem3dg_boundary.composite.yaml
pbg_membrane_actin_composite/visualizations/: __init__.py  _plotly_helpers.py  backpressure_trace.py  barrier_kinematics.py  coupling_trace.py  energy_budget.py  force_velocity_scatter.py  membrane_volume_strain.py  particles_3d.py  population_trace.py  ratchet_event_rate.py  schematic_vesicle_3d.py
references/: claims.yaml  papers.bib
reports/: index.html
scripts/: build-static-report.py  lint-workspace.py  regen-composites.py
studies/actin-to-membrane-force-handshake/: runs.db  (+1 more)
tests/: test_adapters.py  test_assembly.py  test_run.py
workspace/: index.html
(+87 files in other folders)
